@@ -17,7 +17,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.zirco"
-      android:versionCode="1" android:versionName="0.2.8">
+      android:versionName="0.2.8" android:versionCode="2">
     <application
     	android:icon="@drawable/icon"
     	android:label="@string/ApplicationName" android:debuggable="false">
